# api-contract/openapi.yaml
@@ -2,7 +2,7 @@ openapi: "3.0.3"
 info:
   title: "backend API"
   description: "backend API"
-  version: "1.100.0"
+  version: "1.200.0"
 servers:
   - url: "/" # this acts as the “base path”
     description: |
@@ -313,6 +313,12 @@ paths:
           required: true
           schema:
             type: "string"
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/ReasonResource"
+        required: true
       responses:
         "200":
           description: "OK"
@@ -914,6 +920,11 @@ paths:
           required: true
           schema:
             type: string
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/ReasonResource"
       responses:
         "200":
           description: "OK"
@@ -1517,6 +1528,17 @@ components:
         end:
           type: "string"
           format: "date"
+    ValidityPeriodResource:
+      type: "object"
+      properties:
+        start:
+          type: "string"
+          format: "date"
+        end:
+          type: "string"
+          format: "date"
+        hideEndDate:
+          type: "boolean"
     ReadRequestIdResource:
       type: "object"
       properties:
@@ -1534,9 +1556,11 @@ components:
         referralTask:
           $ref: "#/components/schemas/ReferralTaskResource"
         performerTasks:
-          type: "array"
-          items:
-            $ref: "#/components/schemas/PerformerTaskResource"
+          type: object
+          additionalProperties:
+            type: array
+            items:
+              $ref: "#/components/schemas/PerformerTaskResource"
         organizationTasks:
           type: "array"
           items:
@@ -1553,7 +1577,10 @@ components:
         category:
           type: string
         period:
-          $ref: "#/components/schemas/PeriodResource"
+          $ref: "#/components/schemas/ValidityPeriodResource"
+        treatmentValidityEndDate:
+          type: string
+          format: date
         responses:
           type: "object"
           additionalProperties: true # → keys can be any string, and values can be any type (any)
@@ -1630,6 +1657,19 @@ components:
           additionalProperties: true # → keys can be any string, and values can be any type (any)
         pseudonymizedKey:
           type: string
+        prescriber:
+          $ref: "#/components/schemas/PrescriberResource"
+    PrescriberResource:
+      required:
+        - ssin
+        - discipline
+      properties:
+        ssin:
+          type: string
+        discipline:
+          type: string
+        organizationNihii11: 
+          type: string         
     AssignCareGiverResource:
       type: "object"
       required:
@@ -1688,7 +1728,7 @@ components:
         status:
           $ref: "#/components/schemas/RequestStatus"
         period:
-          $ref: "#/components/schemas/PeriodResource"
+          $ref: "#/components/schemas/ValidityPeriodResource"
         assigned:
           type: boolean
     RequestSummaryListResource:
@@ -1738,10 +1778,14 @@ components:
     InstitutionTypeResource:
       type: string
       enum:
-        - THIRD_PARTY_PAYING_GROUP
-        - GROUP_OF_DOCTORS
+        - OTD_PHARMACY
+        - OFFICE_DOCTORS
+        - GROUPOFDOCTORS
         - GUARD_POST
         - MEDICAL_HOUSE
+        - HOSPITAL
+        - REEDUCATION
+        - GROUPOFNURSES
         - HOME_SERVICES
     CityResource:
       type: "object"
@@ -1809,10 +1853,20 @@ components:
         - "DENTIST"
         - "NURSE"
         - "MIDWIFE"
-        - "HEAD"
-        - "ADMINISTRATIVE"
-        - "PATIENT"
         - "PHYSIOTHERAPIST"
+        - "PATIENT"
+    OIDC:
+      type: "string"
+      enum:
+        - "otdpharmacy"
+        - "officedoctors"
+        - "groupofdoctors"
+        - "guardpost"
+        - "medicalhouse"
+        - "hospital"
+        - "reeducation"
+        - "groupofnurses"
+        - "homecareservices"        
     HealthcareOrganizationResource:
       type: "object"
       properties:
@@ -2109,8 +2163,7 @@ components:
         - pharmacist
         - dentist
         - midwife
-        - administrative
-        - head
+        - organization
     PageModelEntityDto:
       type: object
       properties:
