# reuse/code/services/helpers/request-professional-data.service.ts
@@ -1,47 +1,62 @@
-import { inject, Injectable } from '@angular/core';
-import {
-  HealthcareOrganizationResource,
-  HealthcareProResource,
-  HealthCareProviderRequestResource,
-  ProviderType,
-} from '@reuse/code/openapi';
-import { BehaviorSubject, catchError, map, mergeScan, Observable, of, scan, startWith, Subject, tap } from 'rxjs';
+import { inject, Injectable, signal } from '@angular/core';
+import { HealthcareProResource, HealthCareProviderRequestResource, ProviderType } from '@reuse/code/openapi';
+import { catchError, EMPTY, expand, map, mergeScan, Observable, of, scan, startWith, Subject, tap } from 'rxjs';
 import { SearchProfessionalCriteria } from '@reuse/code/interfaces';
 import { HealthcareProviderService } from '@reuse/code/services/api/healthcareProvider.service';
+import { DeviceService } from '@reuse/code/services/helpers/device.service';
+import { takeUntil } from 'rxjs/operators';
 
+type HealthcareResource = HealthcareProResource;
+
+interface InitialTableData {
+  data: HealthcareResource[];
+  total: number;
+}
+/**
+ * Service that handles healthcare professional/organization data loading and aggregation for cards (mobile) and table (desktop)
+ *
+ */
 @Injectable({ providedIn: 'root' })
 export class RequestProfessionalDataService {
   private readonly healthcareProviderService = inject(HealthcareProviderService);
+  private readonly _deviceService = inject(DeviceService);
 
-  private static readonly PAGE_SIZE = 10;
+  protected readonly isDesktop = this._deviceService.isDesktop;
+
+  private readonly PAGE_SIZE: number = this.isDesktop() ? 20 : 10;
+
+  private readonly _data = signal<HealthcareResource[]>([]);
+  private readonly _loading = signal<boolean>(false);
+
+  readonly data = this._data.asReadonly();
+  readonly loading = this._loading.asReadonly();
+  private _tableDestroyed = new Subject<void>();
 
   private readonly loadTrigger = new Subject<void>();
-  private readonly dataSubject = new BehaviorSubject<(HealthcareProResource | HealthcareOrganizationResource)[]>([]);
-  private readonly loadingSubject = new BehaviorSubject<boolean>(false);
 
-  readonly data$ = this.dataSubject.asObservable();
-  readonly loading$ = this.loadingSubject.asObservable();
+  initializeCardsDataStream(initialData: HealthcareResource[], loadConfig: SearchProfessionalCriteria): void {
+    this._data.set(initialData);
+    this.createCardsDataStream(initialData, loadConfig).subscribe({
+      next: data => this._data.set(data),
+      error: error => this.handleStreamError(error),
+    });
+  }
 
-  initializeDataStream(
-    initialData: (HealthcareProResource | HealthcareOrganizationResource)[],
-    loadConfig: SearchProfessionalCriteria
-  ): void {
-    this.dataSubject.next(initialData);
-
-    const dataStream$ = this.createDataStream(loadConfig);
-    dataStream$.subscribe({
-      next: data => this.dataSubject.next(data),
+  initializeTableDataStream(initialData: InitialTableData, loadConfig: SearchProfessionalCriteria): void {
+    this._data.set(initialData.data);
+    this.createTableDataStream(initialData, loadConfig).subscribe({
+      next: data => this._data.set(data),
       error: error => this.handleStreamError(error),
     });
   }
 
   triggerLoad(): void {
-    this.setLoadingState(true);
+    this._loading.set(true);
     this.loadTrigger.next();
   }
 
   retryLoad(currentDataCount: number): void {
-    if (currentDataCount <= RequestProfessionalDataService.PAGE_SIZE) {
+    if (currentDataCount <= this.PAGE_SIZE) {
       throw new Error('INITIAL_RETRY_REQUIRED');
     } else {
       this.triggerLoad();
@@ -49,73 +64,82 @@ export class RequestProfessionalDataService {
   }
 
   reset(): void {
-    this.dataSubject.next([]);
-    this.loadingSubject.next(false);
+    this._data.set([]);
+    this._loading.set(false);
   }
 
-  private createDataStream(
+  tableReset() {
+    this._tableDestroyed.next();
+    this._tableDestroyed.complete();
+    this._tableDestroyed = new Subject<void>();
+    this.reset();
+  }
+
+  /**
+   * Loads additional cards when loadTrigger emits a value.
+   * */
+  private createCardsDataStream(
+    initialData: HealthcareResource[],
     params: SearchProfessionalCriteria
-  ): Observable<(HealthcareProResource | HealthcareOrganizationResource)[]> {
+  ): Observable<HealthcareResource[]> {
     return this.loadTrigger.pipe(
       startWith(null),
       scan(this.calculateNextPage, -1),
-      mergeScan(
-        (accumulatedData, page) => this.loadDataForPage(accumulatedData, page, params),
-        [] as (HealthcareProResource | HealthcareOrganizationResource)[]
-      )
+      mergeScan((accumulated, pageIndex) => {
+        if (pageIndex === 0) return of(initialData);
+        return this.fetchRawItems(pageIndex, params).pipe(map(({ newItems }) => [...accumulated, ...newItems]));
+      }, [] as HealthcareResource[])
     );
   }
 
-  private calculateNextPage = (currentOffset: number): number => {
-    return currentOffset + 1;
-  };
-
-  private loadDataForPage(
-    accumulatedData: (HealthcareProResource | HealthcareOrganizationResource)[],
-    page: number,
+  /**
+   * Loads all professionals sequentially as soon as each one completes until all professional are being fetched
+   */
+  private createTableDataStream(
+    initialData: InitialTableData,
     params: SearchProfessionalCriteria
-  ): Observable<(HealthcareProResource | HealthcareOrganizationResource)[]> {
-    this.setLoadingState(true);
+  ): Observable<HealthcareResource[]> {
+    if (initialData.total === 0) {
+      return of([]);
+    }
 
-    const dataObservable$ =
-      page === 0
-        ? of(this.dataSubject.getValue()) // Return initial values for page 0
-        : this.fetchData(page, params, accumulatedData);
+    // Emit initial data with the already loaded one
+    return of({ accumulated: initialData.data, pageIndex: 0, total: initialData.total }).pipe(
+      expand(({ accumulated, pageIndex, total }) => {
+        const nextIndex = pageIndex + 1;
 
-    return dataObservable$.pipe(
-      tap(() => this.setLoadingState(false)),
+        if (accumulated.length >= total) return EMPTY;
+
+        return this.fetchRawItems(nextIndex, params).pipe(
+          map(res => ({
+            accumulated: [...accumulated, ...res.newItems],
+            pageIndex: nextIndex,
+            total: res.total,
+          }))
+        );
+      }),
+      takeUntil(this._tableDestroyed),
+      map(state => state.accumulated)
+    );
+  }
+
+  private fetchRawItems(
+    pageIndex: number,
+    params: SearchProfessionalCriteria
+  ): Observable<{ newItems: HealthcareResource[]; total: number }> {
+    this._loading.set(true);
+
+    return this.callServiceMethod(params, pageIndex).pipe(
+      map(response => ({
+        newItems: [...(response.healthcareProfessionals ?? [])],
+        total: response.total ?? 0,
+      })),
+      tap(() => this._loading.set(false)),
       catchError(() => {
-        this.setLoadingState(false);
-        return of(accumulatedData);
+        this._loading.set(false);
+        return of({ newItems: [], total: 0 });
       })
     );
-  }
-
-  private fetchData(
-    page: number,
-    params: SearchProfessionalCriteria,
-    accumulatedData: (HealthcareProResource | HealthcareOrganizationResource)[]
-  ): Observable<(HealthcareProResource | HealthcareOrganizationResource)[]> {
-    const serviceCall$ = this.fetchDataDirectly(params, page);
-
-    return serviceCall$.pipe(
-      map(response => {
-        let newItems: (HealthcareProResource | HealthcareOrganizationResource)[] = [];
-        if (response && ('healthcareProfessionals' in response || 'healthcareOrganizations' in response)) {
-          newItems = [...(response.healthcareProfessionals ?? []), ...(response.healthcareOrganizations ?? [])];
-        }
-
-        if (!newItems) return accumulatedData;
-        return newItems.length > 0 ? [...accumulatedData, ...newItems] : accumulatedData;
-      })
-    );
-  }
-
-  private fetchDataDirectly(
-    params: SearchProfessionalCriteria,
-    page: number
-  ): Observable<HealthCareProviderRequestResource> {
-    return this.callServiceMethod(params, page);
   }
 
   private callServiceMethod(
@@ -131,16 +155,16 @@ export class RequestProfessionalDataService {
       criteria.prescriptionId,
       criteria.intent,
       page + 1,
-      RequestProfessionalDataService.PAGE_SIZE
+      this.PAGE_SIZE
     );
   }
 
-  private setLoadingState(isLoading: boolean): void {
-    this.loadingSubject.next(isLoading);
-  }
+  private readonly calculateNextPage = (currentOffset: number): number => {
+    return currentOffset + 1;
+  };
 
   private handleStreamError(error: any): void {
     console.error('Data stream error:', error);
-    this.setLoadingState(false);
+    this._loading.set(false);
   }
 }
